package com.csl.observer;

/**
 * @author MaoLongLong
 * @date 2021-04-17 0:04
 */
public interface Observer {

    void update();
}
